tests/csmith/bad/smith000605.c
/*
 * This is a RANDOMLY GENERATED PROGRAM.
 *
 * Generator: csmith 2.0.0
 * svn version: exported
 * Options:   --check-global -s 605
 * Seed:      605
 */

#include "random_runtime.h"


long __undefined;

/* --- Struct/Union Declarations --- */
/* --- GLOBAL VARIABLES --- */
 const uint32_t g_6 = 0L;
int32_t g_9 = -1L;
uint16_t g_12 = -9L;
int64_t g_13 = 0L;


/* --- FORWARD DECLARATIONS --- */
uint16_t  func_1(void);


/* --- FUNCTIONS --- */
/* ------------------------------------------ */
/* 
 * reads : g_6 g_9 g_13
 * writes: g_9 g_12
 */
uint16_t  func_1(void)
{ /* block id: 0 */
    uint32_t l_7 = 0x147B80BEL;
    int32_t *l_8[9];
    int i;
    for (i = 0; i < 9; i++)
        l_8[i] = &g_9;
    g_9 |= ((safe_div_func_int32_t_s_s(-9L, (safe_add_func_int32_t_s_s((((g_6 != l_7) == g_6) & g_6), g_6)))) >= l_7);
    g_9 = g_6;
    g_12 &= (safe_lshift_func_uint8_t_u_s((g_9 < g_9), (0x0176DF7EL == (&g_9 != l_8[0]))));
    g_9 &= g_6;
    return g_13;
}




/* ---------------------------------------- */
int main (int argc, char* argv[])
{
    func_1();
    printf("checksum g_6 = %d\n", g_6);
    printf("checksum g_9 = %d\n", g_9);
    printf("checksum g_12 = %d\n", g_12);
    printf("checksum g_13 = %d\n", g_13);
}

/************************ statistics *************************
XXX max struct depth: 0
breakdown:
   depth: 0, occurrence: 6

XXX max expression depth: 0
breakdown:
   depth: 0, occurrence: 5

XXX total number of pointers: 1

XXX times a variable address is taken: 2
XXX times a pointer is dereferenced on RHS: 0
breakdown:
XXX times a pointer is dereferenced on LHS: 0
breakdown:
XXX times a pointer is compared with null: 0
XXX times a pointer is compared with address of another variable: 1
XXX times a pointer is compared with another pointer: 0
XXX times a pointer is qualified to be dereferenced: 17
XXX number of pointers point to pointers: 0
XXX number of pointers point to scalars: 1
XXX number of pointers point to structs: 0
XXX percent of pointers has null in alias set: 0
XXX average alias set size: 1

XXX times a non-volatile is read: 12
XXX times a non-volatile is write: 4
XXX times a volatile is read: 0
XXX    times read thru a pointer: 0
XXX times a volatile is write: 0
XXX    times written thru a pointer: 0
XXX times a volatile is available for access: 0
XXX percentage of non-volatile access: 100

XXX forward jumps: 0
XXX backward jumps: 0

XXX stmts: 6

XXX percentage a fresh-made variable is used: 18.2
XXX percentage an existing variable is used: 81.8
********************* end of statistics **********************/

